Added Two Prototype Enemies
-First enemy is a motion sensor
When player gets close to motion sensor it activates a laser system
attached to the sensor
The lasers turn on and off from then on
-The second enemy is an arrow launching enemy.
When the player gets close it fires arrows at the player

--- a/Allen.csproj
+++ b/Allen.csproj
@@ -88,6 +88,10 @@
     <Compile Include="Assets\Scripts\Camera\PixelPerfectCamera\Scripts\PixelPerfectCamera.cs" />
     <Compile Include="Assets\Scripts\Camera\PixelPerfectCamera\Scripts\PixelSnap.cs" />
     <Compile Include="Assets\Scripts\Camera\PixelPerfectCamera\Scripts\Scroller.cs" />
+    <Compile Include="Assets\Scripts\Enemies-Sensors\Arrow.cs" />
+    <Compile Include="Assets\Scripts\Enemies-Sensors\ArrowLauncher.cs" />
+    <Compile Include="Assets\Scripts\Enemies-Sensors\Laser.cs" />
+    <Compile Include="Assets\Scripts\Enemies-Sensors\LaserSensor.cs" />
     <Compile Include="Assets\Scripts\Engine\GameManager.cs" />
     <Compile Include="Assets\Scripts\Engine\Hazard.cs" />
     <Compile Include="Assets\Scripts\Engine\HealthPool.cs" />
