Refactored Projectile Code
Refactored code to make it more akin to having projectiles of many
different types and kinds. Added a sensor script that can be attached to
any projectile to determine if the player is within a certain range of
the projectile shooter.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,24 +54,22 @@
      <Compile Include="Assets\Scripts\Camera\PixelPerfectCamera\Scripts\PixelPerfectCamera.cs" />
      <Compile Include="Assets\Scripts\Camera\PixelPerfectCamera\Scripts\PixelSnap.cs" />
      <Compile Include="Assets\Scripts\Camera\PixelPerfectCamera\Scripts\Scroller.cs" />
-     <Compile Include="Assets\Scripts\Enemies\Sensors\Arrow.cs" />
-     <Compile Include="Assets\Scripts\Enemies\Sensors\ArrowLauncher.cs" />
-     <Compile Include="Assets\Scripts\Enemies\Sensors\Laser.cs" />
-     <Compile Include="Assets\Scripts\Enemies\Sensors\LaserSensor.cs" />
      <Compile Include="Assets\Scripts\Engine\GameManager.cs" />
      <Compile Include="Assets\Scripts\Engine\Hazard.cs" />
      <Compile Include="Assets\Scripts\Engine\HealthPool.cs" />
-     <Compile Include="Assets\Scripts\Engine\Projectile.cs" />
-     <Compile Include="Assets\Scripts\Engine\ProjectileShooter.cs" />
      <Compile Include="Assets\Scripts\Engine\SavePoint.cs" />
      <Compile Include="Assets\Scripts\Engine\SceneLoader.cs" />
+     <Compile Include="Assets\Scripts\Engine\Sensor.cs" />
      <Compile Include="Assets\Scripts\Player\ContactPoint.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
+     <Compile Include="Assets\Scripts\Projectiles\ArcedProjectile.cs" />
+     <Compile Include="Assets\Scripts\Projectiles\ArcedProjectileShooter.cs" />
+     <Compile Include="Assets\Scripts\Projectiles\Laser.cs" />
+     <Compile Include="Assets\Scripts\Projectiles\LaserSensor.cs" />
+     <Compile Include="Assets\Scripts\Projectiles\Projectile.cs" />
+     <Compile Include="Assets\Scripts\Projectiles\ProjectileShooter.cs" />
      <None Include="Assets\Scripts\Camera\PixelPerfectCamera\background_art_license.txt" />
      <None Include="Assets\Scripts\Camera\PixelPerfectCamera\README.txt" />
- <Reference Include="UnityEngine.Advertisements">
- <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/UnityEngine.Advertisements.dll</HintPath>
- </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
@@ -86,9 +84,6 @@
  </Reference>
  <Reference Include="UnityEngine.HoloLens">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
- </Reference>
- <Reference Include="UnityEngine.Purchasing">
- <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityPurchasing/UnityEngine.Purchasing.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.VR">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
