--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{C243F3DC-6074-1AF8-5356-A19146887D56}</ProjectGuid>
+    <ProjectGuid>{EF0B2179-1916-5BFF-9A8B-52CE0BE6005D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -54,13 +54,16 @@
      <Compile Include="Assets\Scripts\Camera\PixelPerfectCamera\Scripts\PixelPerfectCamera.cs" />
      <Compile Include="Assets\Scripts\Camera\PixelPerfectCamera\Scripts\PixelSnap.cs" />
      <Compile Include="Assets\Scripts\Camera\PixelPerfectCamera\Scripts\Scroller.cs" />
+     <Compile Include="Assets\Scripts\Engine\ButtonManager.cs" />
      <Compile Include="Assets\Scripts\Engine\GameManager.cs" />
      <Compile Include="Assets\Scripts\Engine\Hazard.cs" />
      <Compile Include="Assets\Scripts\Engine\HealthPool.cs" />
      <Compile Include="Assets\Scripts\Engine\SavePoint.cs" />
      <Compile Include="Assets\Scripts\Engine\SceneLoader.cs" />
      <Compile Include="Assets\Scripts\Engine\Sensor.cs" />
+     <Compile Include="Assets\Scripts\Engine\SkinTone.cs" />
      <Compile Include="Assets\Scripts\Player\ContactPoint.cs" />
+     <Compile Include="Assets\Scripts\Player\MovingEnemy.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
      <Compile Include="Assets\Scripts\Projectiles\ArcedProjectile.cs" />
      <Compile Include="Assets\Scripts\Projectiles\ArcedProjectileShooter.cs" />
@@ -69,7 +72,12 @@
      <Compile Include="Assets\Scripts\Projectiles\Projectile.cs" />
      <Compile Include="Assets\Scripts\Projectiles\ProjectileShooter.cs" />
      <None Include="Assets\Scripts\Camera\PixelPerfectCamera\background_art_license.txt" />
+     <None Include="Assets\Shaders\SkinTone.shader" />
      <None Include="Assets\Scripts\Camera\PixelPerfectCamera\README.txt" />
+     <None Include="Assets\Shaders\Fixed Unlit.shader" />
+ <Reference Include="UnityEngine.Advertisements">
+ <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/UnityEngine.Advertisements.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
@@ -84,6 +92,9 @@
  </Reference>
  <Reference Include="UnityEngine.HoloLens">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.Purchasing">
+ <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityPurchasing/UnityEngine.Purchasing.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.VR">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
