Added Jog and Sprint Animations.

--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,5 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+
+Hi there! We spoke about 1.5 months ago when you expressed interest in doing art for a game development project that I was trying to get off the ground. We've since expanded to a team of 4, but are still in need of another artist. Would you still be interested in joining us? I'd be happy to answer any questions about our team or the project in the meantime. 
